# EdgeInference

./: .gitmodules  CMakeLists.txt  buildScript.py  cc32xx_module_selection.cmake  esp_module_selection.cmake  linux_module_selection.cmake  main.cpp  raspbian12Pi4ModelB_module_selection.cmake  tm4c123_module_selection.cmake  tm4c129_module_selection.cmake
EdgeInference/Main/: CMakeLists.txt  EdgeInference.cpp  EdgeInference.hpp
TrainHandWritten0To9/: RunInference.py  TrainHandWritten0To9.py  fileToArrayOfBytes.py  quantizedHandwrittenZeroToNineModel.hpp  quantizedHandwrittenZeroToNineModel.tflite
